<resources>
    <string name="app_name">intentsimplicits</string>
    <string name="discover_eps">Discover the EPS!</string>
    <string name="localization">Localization</string>
    <string name="coordinates_button">Coordinates</string>
    <string name="direction_button">Direction</string>
    <string name="accessing_web">Entering the web</string>
    <string name="url_button">url option</string>
    <string name="google_button">Via google</string>
    <string name="telephone_contact">Telephone of contact: 973 666 666</string>
    <string name="call_button">Call</string>
    <string name="contacts_buttons">Go to Contacts</string>
    <string name="telephone" translatable="false">973666666</string>
    <string name="lat" translatable="false">41.60788</string>
    <string name="lon" translatable="false">0.623333</string>
    <string name="address" translatable="false">Carrer de Jaume II, 69, Lleida</string>
    <string name="url" translatable="false">http://www.eps.udl.cat/</string>
    <string name="text_to_search" translatable="false">escuela politecnica superior UdL</string>
    <string name="udl_webpage" translatable="false">http://www.udl.cat</string>
    <string name="dial_phone">Dial</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms_body">Hi! This is a dummy sms for telling you that EPS is good i guess?</string>
    <string name="sms_number">666666666</string>
    <string name="send_email">Send Mail</string>
    <string name="destination_mail">pablofrailealonso@gmail.com</string>
    <string name="mail_subject">Go to the EPS academy!</string>
    <string name="mail_message">Going to the EPS makes me feel great, cool and vegan.</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="image_gallery_description">Image from gallery</string>
    <string name="calling_action">Calling....</string>
    <string name="opening_contacts">Opening contacts app</string>
    <string name="opening_dial">Opening Dial App</string>
    <string name="opening_gallery">Opening gallery</string>
    <string name="opening_google">Opening google</string>
    <string name="opening_maps_address">Opening google maps with address</string>
    <string name="opening_maps_coordinates">Opening maps with coordinates</string>
    <string name="opening_mail">Opening mail</string>
    <string name="error_opening_mail">Error opening mail, do you have any mail app installed?</string>
    <string name="opening_sms">Opening SMS app</string>
    <string name="opening_web">Opening web</string>
    <string name="didnt_select_contact">Didn\'t select any contact!</string>
    <string name="goto_extra_activity">Goto Extra Activity</string>
</resources>